--- a/Pandas&DimensionalityReduction.ipynb
+++ b/Pandas&DimensionalityReduction.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 19,
       "id": "9cc259d8",
       "metadata": {
         "id": "9cc259d8"
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 20,
       "id": "5CMxPlMKIOBN",
       "metadata": {
         "id": "5CMxPlMKIOBN"
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 51,
       "id": "965cfec3",
       "metadata": {
         "colab": {
@@ -74,9 +74,9 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "4622\n",
-            "['order_id', 'quantity', 'item_name', 'choice_description', 'item_price']\n",
-            "Veggie Soft Tacos\n"
+            "4621\n",
+            "['order_id', 'quantity', 'item_name', 'choice_description', 'item_price', 'item_price_roubles']\n",
+            "Chicken Bowl\n"
           ]
         },
         {
@@ -107,24 +107,38 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "7.464335785374297\n",
-            "7.464335785374297\n",
-            "92.44\n",
+            "7.465520450119022\n",
+            "7.465520450119022\n",
+            "92.42\n",
             "1\n",
             "726\n",
             "37.5\n",
-            "0        169.69\n",
-            "1        240.69\n",
-            "2        240.69\n",
-            "3        169.69\n",
-            "4       1205.58\n",
-            "         ...   \n",
-            "4617     834.25\n",
-            "4618     834.25\n",
-            "4619     798.75\n",
-            "4620     621.25\n",
-            "4621     621.25\n",
-            "Name: item_price_roubles, Length: 4622, dtype: float64\n"
+            "steaks stats:\n",
+            "count:  702\n",
+            "mean:  10.51888888888889\n",
+            "min:  8.69\n",
+            "max:  27.75\n",
+            "std:  2.5667431178441826 \n",
+            "\n",
+            "sause stats:\n",
+            "steaks with mild sause:  105\n",
+            "steaks with medium sause:  114\n",
+            "steaks with hot sause:  82\n"
+          ]
+        },
+        {
+          "ename": "ValueError",
+          "evalue": "Length of values (33) does not match length of index (4621)",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_13584/2876899786.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     67\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     68\u001b[0m \u001b[1;31m#12\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 69\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'per_price_value'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'item_price'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'quantity'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mround\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     70\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'item_name'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0magg\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'per_price_value'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+            "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__setitem__\u001b[1;34m(self, key, value)\u001b[0m\n\u001b[0;32m   3610\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3611\u001b[0m             \u001b[1;31m# set column\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3612\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_set_item\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3613\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3614\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_setitem_slice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mslice\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+            "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m_set_item\u001b[1;34m(self, key, value)\u001b[0m\n\u001b[0;32m   3782\u001b[0m         \u001b[0mensure\u001b[0m \u001b[0mhomogeneity\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3783\u001b[0m         \"\"\"\n\u001b[1;32m-> 3784\u001b[1;33m         \u001b[0mvalue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_sanitize_column\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3785\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3786\u001b[0m         if (\n",
+            "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m_sanitize_column\u001b[1;34m(self, value)\u001b[0m\n\u001b[0;32m   4507\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4508\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mis_list_like\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 4509\u001b[1;33m             \u001b[0mcom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrequire_length_match\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   4510\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0msanitize_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mallow_2d\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4511\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+            "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\pandas\\core\\common.py\u001b[0m in \u001b[0;36mrequire_length_match\u001b[1;34m(data, index)\u001b[0m\n\u001b[0;32m    529\u001b[0m     \"\"\"\n\u001b[0;32m    530\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 531\u001b[1;33m         raise ValueError(\n\u001b[0m\u001b[0;32m    532\u001b[0m             \u001b[1;34m\"Length of values \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    533\u001b[0m             \u001b[1;34mf\"({len(data)}) \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+            "\u001b[1;31mValueError\u001b[0m: Length of values (33) does not match length of index (4621)"
           ]
         }
       ],
@@ -134,7 +148,7 @@
         "#2\n",
         "print(list(df.columns))\n",
         "#3\n",
-        "print(max(df['item_name']))\n",
+        "print(df['item_name'].mode().tolist()[0])\n",
         "#4\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
@@ -147,7 +161,7 @@
         "maxfreq = n.max()\n",
         "plt.show()\n",
         "#5\n",
-        "#df['item_price'] = df['item_price'].apply(lambda x: float(x.replace('$','')) )\n",
+        "df['item_price'] = df['item_price'].apply(lambda x: float(x.replace('$','')) )\n",
         "#6\n",
         "\n",
         "plt.bar(x=df['item_name'].unique(), height=df.groupby('item_name')['item_price'].sum())\n",
@@ -170,10 +184,51 @@
         "print(df.groupby('item_name')['item_name'].apply(pd.value_counts).median())\n",
         "\n",
         "#9\n",
+        "steaks_df = df.loc[df['item_name'].str.split(' ').str[0] == 'Steak']\n",
+        "df.drop(index = 4509, inplace = True)\n",
+        "print('steaks stats:')\n",
+        "print('count: ', steaks_df['item_price'].count())\n",
+        "print('mean: ', steaks_df['item_price'].mean())\n",
+        "print('min: ', steaks_df['item_price'].min())\n",
+        "print('max: ', steaks_df['item_price'].max())\n",
+        "print('std: ', steaks_df['item_price'].std(),'\\n')\n",
         "\n",
+        "print('sause stats:')\n",
+        "mild_steaks_df = steaks_df.loc[steaks_df['choice_description'].str.find('Mild') != -1]\n",
+        "print('steaks with mild sause: ', mild_steaks_df['item_name'].count())\n",
         "\n",
+        "medium_steaks_df = steaks_df.loc[steaks_df['choice_description'].str.find('Medium') != -1]\n",
+        "print('steaks with medium sause: ', medium_steaks_df['item_name'].count())\n",
+        "\n",
+        "hot_steaks_df = steaks_df.loc[steaks_df['choice_description'].str.find('Hot') != -1]\n",
+        "print('steaks with hot sause: ', hot_steaks_df['item_name'].count())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 70,
+      "id": "dad80d87",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x00000264083F7C70>\n"
+          ]
+        }
+      ],
+      "source": [
         "#10\n",
-        "df['item_price_roubles'] = pd.Series(df['item_price']*71, index=df.index)"
+        "USD_COURSE = 71\n",
+        "df['item_price_roubles'] = pd.Series(df['item_price'] * USD_COURSE, index=df.index)\n",
+        "\n",
+        "#11\n",
+        "\n",
+        "\n",
+        "#12\n",
+        "df['per_price_value'] = (df['item_price'] / df['quantity']).round(3)\n",
+        "print(df[['item_name','per_price_value']].groupby('item_name'))"
       ]
     },
     {
